--- a/borderpatrol-core/BUILD
+++ b/borderpatrol-core/BUILD
@@ -1,14 +1,9 @@
 maven_layout()
 
 jar_library(name='borderpatrol-core',
-  dependencies=[
-    pants('borderpatrol/borderpatrol-core/src/main/scala')
-  ]
+  dependencies=[ 'borderpatrol/borderpatrol-core/src/main/scala' ]
 )
 
 jar_library(name='tests',
-  dependencies=[
-    pants('borderpatrol/borderpatrol-core/src/test/java'),
-    pants('borderpatrol/borderpatrol-core/src/test/scala')
-  ]
+  dependencies=[ 'borderpatrol/borderpatrol-core/src/test/scala' ]
 )
