Adding Upstream configuration using a borderpatrol.json file

--- a/borderpatrol.conf
+++ b/borderpatrol.conf
@@ -1,20 +1,22 @@
 {
   "services": [
     {
-      "name": "mtp",
-      "rewriteRule":"/mtp=>/"
-      "hosts": [
-        "http://localhost:8081",
-        "http://localhost:8082"
-      ]
+      "name": "foo",
+      "friendlyName": "Super Duper Foo"
+      "rewriteRule":"/foo=>/"
+      "hosts":"localhost:8081,localhost:8082"
     },
     {
-      "name": "flexd",
-      "rewriteRule":"/flexd=>/"
-      "hosts": [
-        "http: //localhost: 8083"
-
-      ]
+      "name": "bar",
+      "friendlyName": "Super Duper Bar"
+      "rewriteRule":"/bar=>/"
+      "hosts":"localhost:8083"
+    }
+    {
+      "name": "baz",
+      "friendlyName": "Just OK Baz"
+      "rewriteRule":"/baz=>/"
+      "hosts":"localhost:8084"
     }
   ]
 }
