Create Secrets Serializer Create Consul Service Create SecretsWatcher backed by Consul

--- a/borderpatrol.conf
+++ b/borderpatrol.conf
@@ -18,5 +18,11 @@
       "rewriteRule":"/baz=>/"
       "hosts":"localhost:8084"
     }
+    {
+      "name": "consul",
+      "friendlyName": "Consul Service"
+      "rewriteRule":"/consul=>/"
+      "hosts":"localhost:8500"
+    }
   ]
 }
