--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 language: scala
+sudo: false
 scala:
-  - 2.10.4
-  - 2.11.4
+  - 2.10.5
+  - 2.11.7
 jdk:
   - oraclejdk7
   - oraclejdk8
-  - openjdk7
-
-script: "sbt clean coverage test"
+script: "sbt ++$TRAVIS_SCALA_VERSION clean coverage test scalastyle && sbt ++$TRAVIS_SCALA_VERSION coverageAggregate"
 after_success: "sbt coveralls"
