Fixed scalastyle errors and changed default config filename
Fixes #81

--- a/bpConfig.json
+++ b/bpConfig.json
@@ -41,7 +41,7 @@
       "hosts": "localhost:8081",
       "loginManager": "checkpoint",
       "subdomain": "admin",
-      "path": "/admin/metrics.json",
+      "path": "/admin",
       "name": "admin"
     }
   ]
