--- a/bpConfig.json
+++ b/bpConfig.json
@@ -29,7 +29,7 @@
         "type": "OAuth2Code",
         "loginConfirm": "/signin",
         "authorizeUrl": "https://login.microsoftonline.com/8ed23968-6ed0-4923-8227-b9edb1a9b5fd/oauth2/authorize",
-        "tokenUrl": "https://login.microsoftonline.com/8ed23968-6ed0-4923-8227-b9edb1a9b5fd/oauth2/token",
+        "tokenUrl": "https://login.microsoftonline.com:443/8ed23968-6ed0-4923-8227-b9edb1a9b5fd/oauth2/token",
         "clientId": "d3a7f9b0-99cb-4a97-95ff-e2c9d910c46f",
         "clientSecret": "OfimThKuL0pTHPqUu2NF2U/BZeEu4m17R7wynzZrHmo="
       }
