Use ConcurrentMap for client cache in Binder
Fixes #96

--- a/bpConfig.json
+++ b/bpConfig.json
@@ -11,7 +11,7 @@
   },
   "loginManagers": [
     {
-      "name": "checkpoint",
+      "name": "domestic",
       "identityManager": "keymaster",
       "accessManager": "keymaster",
       "proto": {
@@ -22,16 +22,16 @@
       }
     },
     {
-      "name": "cascade",
+      "name": "dilli",
       "identityManager": "keymaster",
       "accessManager": "keymaster",
       "proto": {
         "type": "OAuth2Code",
         "loginConfirm": "/signin",
-        "authorizeUrl": "https://login.microsoftonline.com/8ed23968-6ed0-4923-8227-b9edb1a9b5fd/oauth2/authorize",
-        "tokenUrl": "https://login.microsoftonline.com:443/8ed23968-6ed0-4923-8227-b9edb1a9b5fd/oauth2/token",
-        "clientId": "d3a7f9b0-99cb-4a97-95ff-e2c9d910c46f",
-        "clientSecret": "OfimThKuL0pTHPqUu2NF2U/BZeEu4m17R7wynzZrHmo="
+        "authorizeUrl": "https://login.zoo.com:443/common/oauth2/authorize",
+        "tokenUrl": "https://login.zoo.com:443/common/oauth2/token",
+        "clientId": "MySecretClientId",
+        "clientSecret": "MySecretClientSecret"
       }
     }
   ],
@@ -55,10 +55,10 @@
     },
     {
       "hosts": ["http://localhost:8081"],
-      "loginManager": "cascade",
-      "subdomain": "cascade",
+      "loginManager": "dilli",
+      "subdomain": "dilli",
       "path": "/top",
-      "name": "cascade"
+      "name": "dilli"
     }
   ]
 }
