--- a/bpConfig.json
+++ b/bpConfig.json
@@ -63,6 +63,7 @@
       "loginManager": "dilli",
       "subdomain": "dilli",
       "path": "/top",
+      "rewritePath": "/internal/top",
       "name": "dilli"
     }
   ]
