Download AAD certificate and verify signature on Access Token
- Also, split KeymasterPreLoginFilter to KeymasterTransformFilter and
  KeymasterPreLoginFilter
- Moved oAuth2 functionality to core
- Added caching for AAD certificate (still missing timely gc)
- Support for RSA & EC algorithms

Fixes #109

--- a/bpConfig.json
+++ b/bpConfig.json
@@ -35,6 +35,7 @@
         "loginConfirm": "/signin",
         "authorizeUrl": "https://login.zoo.com:443/common/oauth2/authorize",
         "tokenUrl": "https://login.zoo.com:443/common/oauth2/token",
+        "certificateUrl": "https://login.zoo.com:443/common/certificate",
         "clientId": "MySecretClientId",
         "clientSecret": "MySecretClientSecret"
       }
