Made Consul key configurable
Also split the get, put, poll code into small pieces

Fixes #90

--- a/bpConfig.json
+++ b/bpConfig.json
@@ -43,7 +43,8 @@
   ],
   "secretStore": {
     "type": "ConsulSecretStore",
-    "hosts": "localhost:8500"
+    "hosts": ["http://localhost:8500"],
+    "key": "BpSecrets"
   },
   "identityManagers": [
     {
